; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/platform/java/extr_mupdf_native.c_get_static_method.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/platform/java/extr_mupdf_native.c_get_static_method.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32* (%struct.TYPE_4__**, i32, i8*, i8*)* }

@current_class = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [41 x i8] c"Failed to get static method for %s %s %s\00", align 1
@current_class_name = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, %struct.TYPE_4__**, i8*, i8*)* @get_static_method to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_static_method(i32* %0, %struct.TYPE_4__** %1, i8* %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_4__**, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store %struct.TYPE_4__** %1, %struct.TYPE_4__*** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = load i32, i32* %11, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %17, label %14

14:                                               ; preds = %4
  %15 = load i32, i32* @current_class, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %18, label %17

17:                                               ; preds = %14, %4
  store i32* null, i32** %5, align 8
  br label %38

18:                                               ; preds = %14
  %19 = load %struct.TYPE_4__**, %struct.TYPE_4__*** %7, align 8
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 0
  %22 = load i32* (%struct.TYPE_4__**, i32, i8*, i8*)*, i32* (%struct.TYPE_4__**, i32, i8*, i8*)** %21, align 8
  %23 = load %struct.TYPE_4__**, %struct.TYPE_4__*** %7, align 8
  %24 = load i32, i32* @current_class, align 4
  %25 = load i8*, i8** %8, align 8
  %26 = load i8*, i8** %9, align 8
  %27 = call i32* %22(%struct.TYPE_4__** %23, i32 %24, i8* %25, i8* %26)
  store i32* %27, i32** %10, align 8
  %28 = load i32*, i32** %10, align 8
  %29 = icmp eq i32* %28, null
  br i1 %29, label %30, label %36

30:                                               ; preds = %18
  %31 = load i32, i32* @current_class_name, align 4
  %32 = load i8*, i8** %8, align 8
  %33 = load i8*, i8** %9, align 8
  %34 = call i32 @LOGI(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0), i32 %31, i8* %32, i8* %33)
  %35 = load i32*, i32** %6, align 8
  store i32 1, i32* %35, align 4
  br label %36

36:                                               ; preds = %30, %18
  %37 = load i32*, i32** %10, align 8
  store i32* %37, i32** %5, align 8
  br label %38

38:                                               ; preds = %36, %17
  %39 = load i32*, i32** %5, align 8
  ret i32* %39
}

declare dso_local i32 @LOGI(i8*, i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
